# FollowingTestandCode80

./: .coveragerc  .pypirc  LICENSE  README.md  pyproject.toml  setup.py  susancode.py  test_susancode.py  tox.ini
SusanCode/: susancode.py
Tests/: test_susancode.py
susancode/: __init__.py  susancode.py
tests/unit/: test_susancode.py
