[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "susancode"
author = "Susan Wright"
author-email = "swright573@icloud.com"
requires-python = "<4"
description-file = "README.md"
classifiers = ["License :: OSI Approved :: MIT License"]

[tool.flit.metadata.urls]

[tool.flit.metadata.requires-extra]
test = ["pytest", "pytest-cov", "tox"]

[tool.flit.scripts]
susancode = "susancode:main"